[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.258824, 0.321569, 0.541176, 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
text = "Wesh Bouée"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
custom_fonts/font = SubResource( 2 )
text = "2022 - djalexkidd"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -43.0
margin_right = 118.0
margin_bottom = 43.0
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
text = "Jouer"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = 85.0
margin_right = 146.0
margin_bottom = 171.0
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
text = "Quitter"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -46.0
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 3 )
text = "Plein écran"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
